Bug 1684634 - Use InternalHeaders for MimeType instead of caching in the Response/Request constructor. r=baku

Differential Revision: https://phabricator.services.mozilla.com/D101159