dom/fetch/Request.cpp
@@ -60,8 +60,6 @@ Request::Request(nsIGlobalObject* aOwner, SafeRefPtr<InternalRequest> aRequest,
   MOZ_ASSERT(mRequest->Headers()->Guard() == HeadersGuardEnum::Immutable ||
              mRequest->Headers()->Guard() == HeadersGuardEnum::Request ||
              mRequest->Headers()->Guard() == HeadersGuardEnum::Request_no_cors);
-  SetMimeType();
-
   if (aSignal) {
     // If we don't have a signal as argument, we will create it when required by
     // content, otherwise the Request's signal must follow what has been passed.
@@ -608,7 +606,6 @@ SafeRefPtr<Request> Request::Constructor(nsIGlobalObject* aGlobal,
 
   auto domRequest =
       MakeSafeRefPtr<Request>(aGlobal, std::move(request), signal);
-  domRequest->SetMimeType();
 
   if (aInput.IsRequest()) {
     RefPtr<Request> inputReq = &aInput.GetAsRequest();
